fix tray icon spacing

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -122,6 +122,10 @@ tooltip label{
   border: 0px;
 }
 
+#tray {
+  margin: 0;
+}
+
 #tray > .needs-attention {
   -gtk-icon-effect: highlight;
   background-color: @red;
